--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                     <i class="fa-solid fa-circle-info nav-link-icon"></i>
                 </a>
                 <a href="#portfolio" class="nav-link">
-                    <i class="fa-solid fa-user-nurse nav-link-icon"></i>
+                    <i class="fa-solid fa-window-restore nav-link-icon"></i>
                 </a>
                 <a href="#recem" class="nav-link">
-                    <i class="fa-solid fa-person-breastfeeding nav-link-icon"></i>
+                    <i class="fa-brands fa-dev nav-link-icon"></i>
                 </a>
             </div>
 
