--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#portfolio" class="nav-link">
                     <i class="fa-solid fa-window-restore nav-link-icon"></i>
                 </a>
-                <a href="#recem" class="nav-link">
+                <a href="#team" class="nav-link">
                     <i class="fa-brands fa-dev nav-link-icon"></i>
                 </a>
             </div>
@@ -56,10 +56,10 @@
                         BOAS-VINDAS A THEBESTSOFTWARE 👋
                     </h5>
                     <h1 class="section-subtitle" id="home-subtitle">
-                        Assistência médica simplificada para todos
+                        SERVIÇOS DE DESENVOLVIMENTO DE SOFTWARE
                     </h1>
                     <p class="section-text" id="home-text">
-                        Os médicos da DoctorCare vão além dos sintomas para tratar a causa raiz de sua doença e proporcionar uma cura a longo prazo.
+                        Acelerando seus planos com produtos digitais sem ultrapassar o orçamento.
                     </p>
                     <a href="#contact" class="whatsapp-link" id="home-link">
                         <i class="fa-brands fa-whatsapp whatsapp-link-icon"></i>
@@ -155,7 +155,7 @@
         </section>
         <section id="portfolio">
             <h5 class="section-title">PORTOFOLIO</h5>
-            <h1 class="section-subtitle">Conheça as nossas Especialidades</h1>
+            <h1 class="section-subtitle">Conheça os nossos trabalho</h1>
             <div class="portfolio-informations">
                 <div class="portfolio-information">
                     <img src="./assets/images/img/goofood1.png" alt="Doutor Clínico Geral em Sala de Hospital" class="portfolio-information-img" />
@@ -186,53 +186,51 @@
                 </div>
             </div>
         </section>
-        <section id="recem">
+        <section id="team">
             <div class="wrapper">
                 <header>
-                    <h5 class="section-title">Recém Nascidos</h5>
-                    <h2 class="section-subtitle">
-                        Mantemos o arquivo pelo período máximo de 12 meses
-                    </h2>
+                    <h5 class="section-title">Equipe</h5>
+                    <h2 class="section-subtitle">Conheça o nosso time</h2>
                 </header>
 
                 <div class="content">
                     <div class="cards">
                         <div class="responsive">
                             <div class="gallery">
-                                <a target="_blank" href="assets/imagem-6.jpg">
-                                    <img src="assets/images/imagem-6.jpg" alt="Cinque Terre" />
+                                <a target="_blank" href="assets/images/equip.png">
+                                    <img src="assets/images/equip.png" alt="Cinque Terre" />
                                 </a>
-                                <h3 class="childern"><strong>Deusa Soares</strong></h3>
+                                <h3 class="childern"><strong>Issufi</strong></h3>
                                 <div class="desc">Add a description of the image here</div>
                             </div>
                         </div>
 
                         <div class="responsive">
                             <div class="gallery">
-                                <a target="_blank" href="imagem-5.jpg">
-                                    <img src="assets/images/imagem-5.jpg" alt="Forest" />
+                                <a target="_blank" href="equip.png">
+                                    <img src="assets/images/equip.png" alt="Forest" />
                                 </a>
-                                <h3 class="childern"><strong>Carol Sanca</strong></h3>
+                                <h3 class="childern"><strong>Yousher</strong></h3>
                                 <div class="desc">Add a description of the image here</div>
                             </div>
                         </div>
 
                         <div class="responsive">
                             <div class="gallery">
-                                <a target="_blank" href="imagem-3.jpg">
-                                    <img src="assets/images/imagem-3.jpg" alt="Northern Lights" />
+                                <a target="_blank" href="equip.png">
+                                    <img src="assets/images/equip.png" alt="Northern Lights" />
                                 </a>
-                                <h3 class="childern"><strong>Malam Balde</strong></h3>
+                                <h3 class="childern"><strong>Malam</strong></h3>
                                 <div class="desc">Add a description of the image here</div>
                             </div>
                         </div>
 
                         <div class="responsive">
                             <div class="gallery">
-                                <a target="_blank" href="imagem-1.jpg">
-                                    <img src="assets/images/imagem-1.jpg" alt="Mountains" />
+                                <a target="_blank" href="equip.png">
+                                    <img src="assets/images/equip.png" alt="Mountains" />
                                 </a>
-                                <h3 class="childern"><strong>Ana Mendes</strong></h3>
+                                <h3 class="childern"><strong>Mendes</strong></h3>
                                 <div class="desc">Add a description of the image here</div>
                             </div>
                         </div>
