--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="separator"></div>
                 <div>
                     <h1 class="home-stats-title">+15</h1>
-                    <h1 class="home-stats-description">Equipe</h1>
+                    <h1 class="home-stats-description">Especialistas disponíveis</h1>
                 </div>
                 <div class="separator"></div>
                 <div>
