--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 <a target="_blank" href="assets/images/equip.png">
                                     <img src="assets/images/equip.png" alt="Cinque Terre" />
                                 </a>
-                                <h3 class="childern"><strong>Issufi</strong></h3>
+                                <h3 class="childern"><strong>Issufi Badji</strong></h3>
                                 <div class="desc">Add a description of the image here</div>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                                 <a target="_blank" href="equip.png">
                                     <img src="assets/images/equip.png" alt="Forest" />
                                 </a>
-                                <h3 class="childern"><strong>Yousher</strong></h3>
+                                <h3 class="childern"><strong>Yousher Badji</strong></h3>
                                 <div class="desc">Add a description of the image here</div>
                             </div>
                         </div>
@@ -221,7 +221,7 @@
                                 <a target="_blank" href="equip.png">
                                     <img src="assets/images/equip.png" alt="Northern Lights" />
                                 </a>
-                                <h3 class="childern"><strong>Malam</strong></h3>
+                                <h3 class="childern"><strong>Malam Badji</strong></h3>
                                 <div class="desc">Add a description of the image here</div>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                                 <a target="_blank" href="equip.png">
                                     <img src="assets/images/equip.png" alt="Mountains" />
                                 </a>
-                                <h3 class="childern"><strong>Mendes</strong></h3>
+                                <h3 class="childern"><strong>António Badji</strong></h3>
                                 <div class="desc">Add a description of the image here</div>
                             </div>
                         </div>
