--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png" />
 
     <link rel="stylesheet" href="./assets/css/style.css" />
+
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -88,20 +89,20 @@
             </div>
         </section>
         <section id="services">
-            <h5 class="section-title">SERVIÇOS</h5>
-            <h1 class="section-subtitle">
+            <h5 class="section-title" id="section-title">SERVIÇOS</h5>
+            <h1 class="section-subtitle" id="section-subtitle">
                 Como podemos ajudá-lo <br />a se sentir melhor?
             </h1>
-            <div class="services-informations">
+            <div class="services-informations" id="services-informations">
                 <div class="services-information">
-                    <i class="fa-solid fa-circle-check services-information-icon"></i>
+                    <i class="fa-solid fa-layer-group services-information-icon"></i>
                     <h3 class="services-information-title">Web Site</h3>
                     <p class="services-information-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas iste id est, et reprehenderit, exercitationem quod culpa nostrum ab esse consectetur, animi hic consequuntur? Rerum accusamus incidunt ratione ipsa tenetur.
                     </p>
                 </div>
                 <div class="services-information">
-                    <i class="fa-solid fa-circle-check services-information-icon"></i>
+                    <i class="fa-solid fa-window-restore services-information-icon"></i>
                     <h3 class="services-information-title">Web Design</h3>
                     <p class="services-information-description">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium a, maiores voluptatem nisi sequi consectetur iure ipsa suscipit dignissimos alias nostrum temporibus amet minus nesciunt molestiae, reprehenderit dolores cumque vitae.
@@ -109,28 +110,28 @@
                 </div>
 
                 <div class="services-information">
-                    <i class="fa-solid fa-circle-check services-information-icon"></i>
+                    <i class="fa-solid fa-mobile services-information-icon"></i>
                     <h3 class="services-information-title">Mobile</h3>
                     <p class="services-information-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, necessitatibus sapiente excepturi, ipsum accusantium veritatis sed nisi enim maiores consequatur distinctio repellendus numquam amet animi ducimus molestiae? Optio, officia saepe!
                     </p>
                 </div>
                 <div class="services-information">
-                    <i class="fa-solid fa-circle-check services-information-icon"></i>
+                    <i class="fa-solid fa-cogs services-information-icon"></i>
                     <h3 class="services-information-title">Setting</h3>
                     <p class="services-information-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet reiciendis nihil praesentium doloremque. Maiores labore asperiores incidunt. In accusamus, soluta natus, odit nostrum beatae nisi possimus animi reiciendis libero distinctio!
                     </p>
                 </div>
                 <div class="services-information">
-                    <i class="fa-solid fa-circle-check services-information-icon"></i>
+                    <i class="fa-solid fa-chart-bar services-information-icon"></i>
                     <h3 class="services-information-title">Analise de sistema</h3>
                     <p class="services-information-description">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur saepe quidem molestias magnam vitae natus quos ratione fuga incidunt eligendi voluptas eos hic, voluptatem fugiat sint in explicabo voluptatum iure.
                     </p>
                 </div>
                 <div class="services-information">
-                    <i class="fa-solid fa-circle-check services-information-icon"></i>
+                    <i class="fa-brands fa-rocketchat services-information-icon"></i>
                     <h3 class="services-information-title">Chatbox</h3>
                     <p class="services-information-description">
                         O coração pode estar fazendo um esforço maior do que o normal para o sangue circular.
@@ -149,7 +150,7 @@
                         Entenda quem somos <br />e por que existimos
                     </h1>
                     <p class="section-text">
-                        A DoctorCare surgiu com a missão e o propósito de ajudar você e milhares de pessoas com o tratamento de Cuidados Paliativos, definidos pela OMS em 1990 e atualizado em 2002.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus maiores aspernatur unde officiis quae necessitatibus quod! Magnam illo voluptatibus modi sit quod ipsa consectetur eaque in, libero nobis atque commodi.
                     </p>
                 </div>
             </div>
@@ -195,45 +196,94 @@
                 </header>
 
                 <div class="content">
-                    <div class="cards">
-                        <div class="responsive">
-                            <div class="gallery">
-                                <a target="_blank" href="assets/images/equip.png">
-                                    <img src="assets/images/equip.png" alt="Cinque Terre" />
-                                </a>
-                                <h3 class="childern"><strong>Issufi Badji</strong></h3>
-                                <div class="desc">Add a description of the image here</div>
+                    <div class="our_team">
+                        <div class="team_member">
+                            <img src="https://images.unsplash.com/photo-1464823063530-08f10ed1a2dd?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=" alt="card background" class="card-img" />
+                            <div class="member_img">
+                                <img src="./assets/images/equip.png" alt="our_team" />
+                                <div class="social_media">
+                                    <div class="facebook item">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </div>
+                                    <div class="twitter item">
+                                        <i class="fab fa-twitter"></i>
+                                    </div>
+                                    <div class="instagram item">
+                                        <i class="fab fa-instagram"></i>
+                                    </div>
+                                </div>
                             </div>
+                            <h3>john wright</h3>
+                            <span>CEO</span>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione perspiciatis, error deleniti quaerat beatae doloribus incidunt excepturi. Fugit deleniti accusantium neque hic quidem voluptatibus cumque.
+                            </p>
                         </div>
-
-                        <div class="responsive">
-                            <div class="gallery">
-                                <a target="_blank" href="equip.png">
-                                    <img src="assets/images/equip.png" alt="Forest" />
-                                </a>
-                                <h3 class="childern"><strong>Yousher Badji</strong></h3>
-                                <div class="desc">Add a description of the image here</div>
+                        <div class="team_member">
+                            <img src="https://images.unsplash.com/photo-1464823063530-08f10ed1a2dd?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=" alt="card background" class="card-img" />
+                            <div class="member_img">
+                                <img src="https://api.lorem.space/image/face?w=150&h=150" alt="our_team" />
+                                <div class="social_media">
+                                    <div class="facebook item">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </div>
+                                    <div class="twitter item">
+                                        <i class="fab fa-twitter"></i>
+                                    </div>
+                                    <div class="instagram item">
+                                        <i class="fab fa-instagram"></i>
+                                    </div>
+                                </div>
                             </div>
+                            <h3>barbara mori</h3>
+                            <span>Accountant</span>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione perspiciatis, error deleniti quaerat beatae doloribus incidunt excepturi. Fugit deleniti accusantium neque hic quidem voluptatibus cumque.
+                            </p>
                         </div>
-
-                        <div class="responsive">
-                            <div class="gallery">
-                                <a target="_blank" href="equip.png">
-                                    <img src="assets/images/equip.png" alt="Northern Lights" />
-                                </a>
-                                <h3 class="childern"><strong>Malam Badji</strong></h3>
-                                <div class="desc">Add a description of the image here</div>
+                        <div class="team_member">
+                            <img src="https://images.unsplash.com/photo-1464823063530-08f10ed1a2dd?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=" alt="card background" class="card-img" />
+                            <div class="member_img">
+                                <img src="./assets/images/equip.png" alt="our_team" />
+                                <div class="social_media">
+                                    <div class="facebook item">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </div>
+                                    <div class="twitter item">
+                                        <i class="fab fa-twitter"></i>
+                                    </div>
+                                    <div class="instagram item">
+                                        <i class="fab fa-instagram"></i>
+                                    </div>
+                                </div>
                             </div>
+                            <h3>harry dickens</h3>
+                            <span>Product Manager</span>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione perspiciatis, error deleniti quaerat beatae doloribus incidunt excepturi. Fugit deleniti accusantium neque hic quidem voluptatibus cumque.
+                            </p>
                         </div>
-
-                        <div class="responsive">
-                            <div class="gallery">
-                                <a target="_blank" href="equip.png">
-                                    <img src="assets/images/equip.png" alt="Mountains" />
-                                </a>
-                                <h3 class="childern"><strong>António Badji</strong></h3>
-                                <div class="desc">Add a description of the image here</div>
+                        <div class="team_member">
+                            <img src="https://images.unsplash.com/photo-1464823063530-08f10ed1a2dd?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=" alt="card background" class="card-img" />
+                            <div class="member_img">
+                                <img src="https://api.lorem.space/image/face?w=150&h=150" alt="our_team" />
+                                <div class="social_media">
+                                    <div class="facebook item">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </div>
+                                    <div class="twitter item">
+                                        <i class="fab fa-twitter"></i>
+                                    </div>
+                                    <div class="instagram item">
+                                        <i class="fab fa-instagram"></i>
+                                    </div>
+                                </div>
                             </div>
+                            <h3>sammy louise</h3>
+                            <span>product analyst</span>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione perspiciatis, error deleniti quaerat beatae doloribus incidunt excepturi. Fugit deleniti accusantium neque hic quidem voluptatibus cumque.
+                            </p>
                         </div>
                     </div>
                 </div>
