--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
                 <div class="content">
                     <div class="our_team">
-                        <div class="team_member">
+                        <div class="team_member responsive">
                             <img src="https://images.unsplash.com/photo-1464823063530-08f10ed1a2dd?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=" alt="card background" class="card-img" />
                             <div class="member_img">
                                 <img src="./assets/images/equip.png" alt="our_team" />
@@ -219,7 +219,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione perspiciatis, error deleniti quaerat beatae doloribus incidunt excepturi. Fugit deleniti accusantium neque hic quidem voluptatibus cumque.
                             </p>
                         </div>
-                        <div class="team_member">
+                        <div class="team_member responsive">
                             <img src="https://images.unsplash.com/photo-1464823063530-08f10ed1a2dd?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=" alt="card background" class="card-img" />
                             <div class="member_img">
                                 <img src="https://api.lorem.space/image/face?w=150&h=150" alt="our_team" />
@@ -241,7 +241,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione perspiciatis, error deleniti quaerat beatae doloribus incidunt excepturi. Fugit deleniti accusantium neque hic quidem voluptatibus cumque.
                             </p>
                         </div>
-                        <div class="team_member">
+                        <div class="team_member responsive">
                             <img src="https://images.unsplash.com/photo-1464823063530-08f10ed1a2dd?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=" alt="card background" class="card-img" />
                             <div class="member_img">
                                 <img src="./assets/images/equip.png" alt="our_team" />
@@ -263,7 +263,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione perspiciatis, error deleniti quaerat beatae doloribus incidunt excepturi. Fugit deleniti accusantium neque hic quidem voluptatibus cumque.
                             </p>
                         </div>
-                        <div class="team_member">
+                        <div class="team_member responsive">
                             <img src="https://images.unsplash.com/photo-1464823063530-08f10ed1a2dd?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=" alt="card background" class="card-img" />
                             <div class="member_img">
                                 <img src="https://api.lorem.space/image/face?w=150&h=150" alt="our_team" />
