--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TheBestSoftware</title>
+    <title>The Best Software</title>
 
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png" />
 
@@ -39,6 +39,9 @@
                 </a>
                 <a href="#team" class="nav-link">
                     <i class="fa-brands fa-dev nav-link-icon"></i>
+                </a>
+                <a href="https://thebest-blog.vercel.app/" class="nav-link">
+                    <i class="fa-solid fa-blog nav-link-icon"></i>
                 </a>
             </div>
 
@@ -318,6 +321,9 @@
                 <p>Todos os direitos reservados</p>
             </div>
             <div class="footer-links">
+                <a href="https://thebest-blog.vercel.app/" target="_blank">
+                    <i class="fa-solid fa-blog footer-link"></i>
+                </a>
                 <a href="https://github.com/issufibadji" target="_blank">
                     <i class="fa-brands fa-github footer-link"></i>
                 </a>
