--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#team" class="nav-link">
                     <i class="fa-brands fa-dev nav-link-icon"></i>
                 </a>
-                <a href="https://thebest-blog.vercel.app/" class="nav-link">
+                <a href="https://thebest-blog.vercel.app/" class="nav-link" target="_blank">
                     <i class="fa-solid fa-blog nav-link-icon"></i>
                 </a>
             </div>
